--- a/css/tooplate-barista.css
+++ b/css/tooplate-barista.css
@@ -648,7 +648,7 @@ strong {
 }
 
 .team-block-wrap:hover .team-block-image {
-  transform: scale(1.3);
+  transform: scale(1);
 }
 
 .team-block-image-wrap {
@@ -661,7 +661,7 @@ strong {
   width: 100%;
   height: 100%;
   transition: all 0.3s;
-  scale: 1.45;
+  scale: 1.1;
 }
 
 .team-block-info {
@@ -686,7 +686,7 @@ strong {
   OUR MENU              
 -----------------------------------------*/
 .menu-section {
-  background-image: url('../images/happy-waitress-giving-coffee-customers-while-serving-them-coffee-shop.jpg');
+  background-image: url('../images/tailors-fashion-dummy-tape-measure-260nw-2464845801.webp');
   background-repeat: no-repeat;
   background-size: cover;
 }
@@ -762,7 +762,7 @@ strong {
 }
 
 .reviews-block-image-wrap {
-  background-image: url('../images/mid-section-waitress-wiping-espresso-machine-with-napkin-cafa-c.jpg');
+  background-image: url('../images/images\ \(24\).jpeg');
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
